# pfila

./: .gitignore  build.py  config.py  dev  dev.bat  dev.ps1  dist.py  pyproject.toml  runner.rs  schemas.py  update.ps1
api/: .gitignore  __init__.py  api.py  app.py  build  build copy.bat  build.bat  go.mod  go.sum  main.go  main_test.go  run  run.bat
api/config/: config.go
api/database/: database.go
api/database/models/: models.go
api/database/repo/: repo.go
api/helpers/: error_messages.go  helpers.go  load_schema.go  web.go
api/mods/procmod/: proc_helpers.go  schemas.go  views.go
api/processes/: freecmd_params.go  ftkimager_params.go  iped_params.go  params.go  processes.go  running.go
api/processes/ftkimager/: ftkimager.go  ftkimager_params.go
api/processes/iped/: iped_params.go
api/runner/: main.go
api/tests/: test.http
api/updater/: main.go
api/utils/: utils.go
api/worker/: main.go
apigo/: build.bat  main.go  main_test.go  run.bat
apigo/database/repo/: repo.go
apigo/helpers/: web.go
apigo/mods/procmod/: proc_helpers.go  schemas.go  views.go
apigo/processes/: params.go  processes.go  runner.go
apigo/processes/ftkimager/: ftkimager_params.go
apigo/processes/iped/: iped_params.go
apigo/runner/: main.go
apigo/utils/: utils.go
database/: db.py
database/models/: __init__.py  models.py
interface/: import-meta.d.ts  index.html  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1685098368734.mjs
interface/src/: App.tsx  AppContext.tsx  index.css  main.tsx
worker/: worker.py
(+28 files in other folders)
