[tool.poetry]
name = "pfila"
version = "0.1.0"
description = ""
authors = ["renatormc"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
SQLAlchemy = {extras = ["mypy"], version = "^2.0.4"}


[tool.poetry.group.dev.dependencies]
uvicorn = {extras = ["standard"], version = "^0.22.0"}
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
